--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.1.4
+    rev: 0.1.6
     hooks:
       - id: check-dev-files
         args:
@@ -38,16 +38,6 @@ repos:
           - --repo-name=ampform-dpd
           - --repo-title=AmpForm-DPD
       - id: colab-toc-visible
-
-  - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.7.1
-    hooks:
-      - id: nbqa-pyupgrade
-        args:
-          - --py38-plus
-      - id: nbqa-ruff
-        args:
-          - --fix
 
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.11.0
@@ -108,19 +98,12 @@ repos:
     hooks:
       - id: pyright
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
-    hooks:
-      - id: pyupgrade
-        args:
-          - --py38-plus
-
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.1.6
     hooks:
       - id: ruff
-        args:
-          - --fix
+        args: [--fix]
+        types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/ComPWA/mirrors-taplo
     rev: v0.8.1
