--- a/tox.ini
+++ b/tox.ini
@@ -82,6 +82,34 @@ setenv =
   FORCE_COLOR = yes
   PYTHONHASHSEED = 0
 
+[testenv:docnblive]
+allowlist_externals =
+  sphinx-autobuild
+commands =
+  sphinx-autobuild \
+    --open-browser \
+    --re-ignore .*/.ipynb_checkpoints/.* \
+    --re-ignore .*/__pycache__/.* \
+    --re-ignore .*\.pkl \
+    --re-ignore .*\.pdf \
+    --re-ignore .*\.png \
+    --re-ignore .*\.svg \
+    --re-ignore .*\.tmp \
+    --re-ignore docs/_build/.* \
+    --re-ignore docs/_images/.* \
+    --re-ignore docs/api/.* \
+    --re-ignore docs/export/.* \
+    --watch docs \
+    --watch src \
+    docs/ docs/_build/html
+description =
+  Set up a server to directly preview changes to the HTML pages
+passenv = *
+setenv =
+  EXECUTE_NB = yes
+  FORCE_COLOR = yes
+  PYTHONHASHSEED = 0
+
 [testenv:docnb-force]
 allowlist_externals =
   sphinx-build
