--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ doc = [
     "sphinx-design",
     "sphinx-pybtex-etal-style",
     "sphinx-togglebutton",
+    "sphinxcontrib-bibtex",
     "tensorwaves[phsp]",
     "tqdm",
 ]
