--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ sty = [
     "pre-commit >=1.4.0",
     "pybtex",
     "sphinx",
+    "sphinx-api-relink >=0.0.4",
 ]
 tensorflow = [
     "ampform-dpd[tf]",
