--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "ampform ~=0.14.4", # Kibble and Kallen functions, perform_cached_doit
+    "ampform >=0.14.8", # Kibble and Kallen functions, perform_cached_doit, @unevaluated
     "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     "cloudpickle",
     "sympy >=1.10", # module sympy.printing.numpy and array expressions with shape kwarg
@@ -52,10 +52,12 @@ doc = [
     "ipywidgets",
     "matplotlib",
     "myst-nb >=0.14", # nb_render_markdown_format for Markdown tables
+    "sphinx-api-relink >=0.0.4",
     "sphinx-book-theme",
     "sphinx-codeautolink[ipython]",
     "sphinx-copybutton",
     "sphinx-design",
+    "sphinx-pybtex-etal-style",
     "sphinx-togglebutton",
     "sphinxcontrib-bibtex",
     "tensorwaves[phsp]",
@@ -93,6 +95,7 @@ sty = [
     "pre-commit >=1.4.0",
     "pybtex",
     "sphinx",
+    "sphinx-api-relink >=0.0.4",
 ]
 tensorflow = [
     "ampform-dpd[tf]",
@@ -291,7 +294,7 @@ ignore-names = [
     "PLW0603",
     "PLW2901",
     "S101",
-    "T201",
+    "T20",
     "TCH00",
 ]
 "docs/*" = [
@@ -302,6 +305,7 @@ ignore-names = [
     "S113",
     "T201",
 ]
+"docs/conf.py" = ["D100"]
 "setup.py" = ["D100"]
 "tests/*" = [
     "D",
@@ -310,6 +314,7 @@ ignore-names = [
     "PLR0913",
     "PLR2004",
     "S101",
+    "T20",
 ]
 
 [tool.ruff.pydocstyle]
