--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,14 +63,12 @@ doc = [
     "tensorwaves[phsp]",
     "tqdm",
 ]
-format = [
-    "black",
-]
 jax = [
     "tensorwaves[jax]",
 ]
 jupyter = [
     "ampform-dpd[doc]",
+    "black",
     "isort",
     "jupyterlab >=3.0",
     "jupyterlab",
@@ -81,21 +79,13 @@ jupyter = [
     "python-lsp-ruff",
     "python-lsp-server[rope]",
 ]
-lint = [
-    "ruff",
-]
 numba = [
     "tensorwaves[numba]",
 ]
 sty = [
-    "ampform-dpd[format]",
-    "ampform-dpd[lint]",
-    "ampform-dpd[test]", # for pytest type hints
-    "docutils",
+    "ampform-dpd[types]",
     "pre-commit >=1.4.0",
-    "pybtex",
-    "sphinx",
-    "sphinx-api-relink >=0.0.4",
+    "ruff",
 ]
 tensorflow = [
     "ampform-dpd[tf]",
@@ -109,6 +99,13 @@ test = [
 ]
 tf = [
     "tensorwaves[tf]",
+]
+types = [
+    "docutils",
+    "pybtex",
+    "pytest",
+    "sphinx",
+    "sphinx-api-relink >=0.0.4",
 ]
 
 [project.readme]
@@ -135,37 +132,20 @@ where = ["src"]
 [tool.setuptools_scm]
 write_to = "src/ampform_dpd/version.py"
 
-[tool.black]
-exclude = '''
-/(
-    .*\.egg-info
-    | .*build
-    | \.eggs
-    | \.git
-    | \.pytest_cache
-    | \.tox
-    | \.venv
-    | \.vscode
-    | dist
-)/
-'''
-include = '\.pyi?$'
-preview = true
-target-version = [
-    "py310",
-    "py311",
-    "py38",
-    "py39",
-]
-
 [tool.pyright]
+reportArgumentType = false
+reportAssignmentType = false
+reportAttributeAccessIssue = false
+reportCallIssue = false
 reportGeneralTypeIssues = false
 reportImportCycles = false
 reportIncompatibleMethodOverride = false
 reportMissingParameterType = false
 reportMissingTypeArgument = false
 reportMissingTypeStubs = false
+reportOperatorIssue = false
 reportPrivateImportUsage = false
+reportReturnType = false
 reportUnknownArgumentType = false
 reportUnknownLambdaType = false
 reportUnknownMemberType = false
@@ -206,7 +186,21 @@ testpaths = [
 ]
 
 [tool.ruff]
+extend-exclude = ["typings"]
 extend-include = ["*.ipynb"]
+preview = true
+show-fixes = true
+src = [
+    "src",
+    "tests",
+]
+target-version = "py38"
+
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
+[tool.ruff.lint]
 extend-select = [
     "A",
     "B",
@@ -252,33 +246,20 @@ ignore = [
     "D407",
     "D416",
     "E501",
+    "ISC001",
     "ISC003",
+    "PLC2401",
     "PLR0913",
+    "PLW1514",
     "S301",
     "SIM108",
 ]
-show-fixes = true
-src = [
-    "src",
-    "tests",
-]
-target-version = "py38"
 task-tags = ["cspell"]
 
-[tool.ruff.pep8-naming]
-ignore-names = [
-    "A",
-    "H",
-    "L",
-    "R",
-    "R_dec",
-    "R_prod",
-    "S",
-    "Γ*",
-    "λ*",
-]
+[tool.ruff.lint.isort]
+split-on-trailing-comma = false
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "*" = ["D"]
 "*.ipynb" = [
     "B018",
@@ -306,19 +287,36 @@ ignore-names = [
     "T201",
 ]
 "docs/conf.py" = ["D100"]
+"jpsi2ksp.ipynb" = ["PLC2701"]
 "setup.py" = ["D100"]
+"src/ampform_dpd/io.py" = ["S403"]
 "tests/*" = [
     "D",
     "INP001",
     "PGH001",
+    "PLC2701",
     "PLR0913",
     "PLR2004",
+    "PLR6301",
     "S101",
     "T20",
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.ruff.pep8-naming]
+ignore-names = [
+    "A",
+    "H",
+    "L",
+    "R",
+    "R_dec",
+    "R_prod",
+    "S",
+    "Γ*",
+    "λ*",
+]
 
 [tool.tomlsort]
 all = false
