DX: remove JSON schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,8 +54,5 @@
   "ruff.enable": true,
   "ruff.importStrategy": "fromEnvironment",
   "ruff.organizeImports": true,
-  "telemetry.telemetryLevel": "off",
-  "yaml.schemas": {
-    "https://json.schemastore.org/github-workflow.json": ".github/workflows/requirements.yml"
-  }
+  "telemetry.telemetryLevel": "off"
 }
