FEAT: implement `load_particles()`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,10 @@
   "ruff.enable": true,
   "ruff.importStrategy": "fromEnvironment",
   "ruff.organizeImports": true,
-  "telemetry.telemetryLevel": "off"
+  "telemetry.telemetryLevel": "off",
+  "yaml.schemas": {
+    "https://raw.githubusercontent.com/ComPWA/qrules/0.10.x/src/qrules/particle-validation.json": [
+      "*particle*.y*ml"
+    ]
+  }
 }
