--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,6 +22,7 @@ vscode:
     - github.vscode-github-actions
     - github.vscode-pull-request-github
     - ms-python.python
+    - ms-python.mypy-type-checker
     - ms-python.vscode-pylance
     - ms-toolsai.vscode-jupyter-cell-tags
     - ms-vscode.live-server
