--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,11 +41,12 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/ComPWA/policy
-    rev: 0.3.6
+    rev: 0.3.8
     hooks:
       - id: check-dev-files
         args:
           - --doc-apt-packages=graphviz
+          - --github-pages
           - --no-prettierrc
           - --pin-requirements=bimonthly
           - --repo-name=ampform-dpd
