--- a/pyproject.toml
+++ b/pyproject.toml
@@ -186,6 +186,9 @@ addopts = [
     "--ignore=docs/conf.py",
     "-m not slow",
 ]
+doctest_optionflags = [
+    "IGNORE_EXCEPTION_DETAIL",
+]
 filterwarnings = [
     "error",
     "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
