DOC: add skeleton serialization notebook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
           - --extra-keys
           - |
             cell.attachments
+            cell.id
             cell.metadata.code_folding
             cell.metadata.editable
             cell.metadata.id
