--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ doc = [
     "ipywidgets",
     "matplotlib",
     "myst-nb >=0.14", # nb_render_markdown_format for Markdown tables
+    "pandas",
     "sphinx-api-relink >=0.0.4",
     "sphinx-book-theme",
     "sphinx-codeautolink[ipython]",
@@ -321,6 +322,13 @@ ignore-names = [
 ]
 "docs/conf.py" = ["D100"]
 "jpsi2ksp.ipynb" = ["PLC2701"]
+"serialization.ipynb" = [
+    "E741",
+    "N813",
+    "PLC2403",
+    "PLC2701",
+    "RUF100",
+]
 "setup.py" = ["D100"]
 "src/ampform_dpd/io.py" = ["S403"]
 "tests/*" = [
