--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Education",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "License :: OSI Approved :: Apache Software License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3.10",
@@ -36,7 +36,7 @@ dependencies = [
 ]
 description = "Symbolic expressions for Dalitz-Plot Decomposition"
 dynamic = ["version"]
-license = {text = "GPLv3 or later"}
+license = {file = "LICENSE"}
 name = "ampform-dpd"
 requires-python = ">=3.8"
 
