--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,7 @@ ci:
   autoupdate_schedule: quarterly # already done by requirements-cron.yml
   skip:
     - mypy
-    - prettier
     - pyright
-    - taplo
 
 repos:
   - repo: meta
@@ -13,15 +11,29 @@ repos:
       - id: check-hooks-apply
       - id: check-useless-excludes
 
+  - repo: https://github.com/ComPWA/policy
+    rev: 0.4.0
+    hooks:
+      - id: check-dev-files
+        args:
+          - --doc-apt-packages=graphviz
+          - --github-pages
+          - --no-prettierrc
+          - --pin-requirements=bimonthly
+          - --repo-name=ampform-dpd
+          - --repo-title=AmpForm-DPD
+      - id: colab-toc-visible
+      - id: remove-empty-tags
+
   - repo: https://github.com/kynan/nbstripout
     rev: 0.7.1
     hooks:
       - id: nbstripout
         args:
+          - --drop-empty-cells
           - --extra-keys
           - |
             cell.attachments
-            cell.id
             cell.metadata.code_folding
             cell.metadata.editable
             cell.metadata.id
@@ -40,20 +52,6 @@ repos:
             metadata.toc-showtags
             metadata.varInspector
             metadata.vscode
-
-  - repo: https://github.com/ComPWA/policy
-    rev: 0.4.0
-    hooks:
-      - id: check-dev-files
-        args:
-          - --doc-apt-packages=graphviz
-          - --github-pages
-          - --no-prettierrc
-          - --pin-requirements=bimonthly
-          - --repo-name=ampform-dpd
-          - --repo-title=AmpForm-DPD
-      - id: colab-toc-visible
-      - id: remove-empty-tags
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.4
