--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,8 +7,9 @@
     "executablebookproject.myst-highlight",
     "github.vscode-github-actions",
     "github.vscode-pull-request-github",
-    "ms-python.python",
+    "mhutchie.git-graph",
     "ms-python.mypy-type-checker",
+    "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-toolsai.vscode-jupyter-cell-tags",
     "ms-vscode.live-server",
