--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,8 @@
   "diffEditor.experimental.showMoves": true,
   "editor.formatOnSave": true,
   "files.associations": {
-    "**/.constraints/py*.txt": "pip-requirements"
+    "**/.constraints/py*.txt": "pip-requirements",
+    "**/pixi.lock": "yaml"
   },
   "files.eol": "\n",
   "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
