--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,11 @@ description =
 allowlist_externals =
   sphinx-build
 commands =
-  sphinx-build -nW --keep-going -b html docs/ docs/_build/html
+  sphinx-build \
+    --builder html \
+    --fail-on-warning \
+    --keep-going \
+    docs/ docs/_build/html
 description =
   Build documentation with Sphinx
 passenv = *
@@ -73,7 +77,11 @@ setenv =
 allowlist_externals =
   sphinx-build
 commands =
-  sphinx-build -nW --keep-going -b html docs/ docs/_build/html
+  sphinx-build \
+    --fail-on-warning \
+    --keep-going \
+    --builder html \
+    docs/ docs/_build/html
 description =
   Execute Jupyter notebooks and build documentation with Sphinx
 passenv = *
@@ -88,10 +96,10 @@ allowlist_externals =
 commands =
   sphinx-autobuild \
     --open-browser \
-    --re-ignore .*/.ipynb_checkpoints/.* \
     --re-ignore .*/__pycache__/.* \
-    --re-ignore .*\.pkl \
+    --re-ignore .*/.ipynb_checkpoints/.* \
     --re-ignore .*\.pdf \
+    --re-ignore .*\.pkl \
     --re-ignore .*\.png \
     --re-ignore .*\.svg \
     --re-ignore .*\.tmp \
@@ -114,7 +122,11 @@ setenv =
 allowlist_externals =
   sphinx-build
 commands =
-  sphinx-build -nW --keep-going -b html docs/ docs/_build/html
+  sphinx-build \
+    --builder html \
+    --fail-on-warning \
+    --keep-going \
+    docs/ docs/_build/html
 description =
   Execute Jupyter notebooks and build documentation with Sphinx
 setenv =
@@ -138,8 +150,8 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    -T \
-    -b linkcheck \
+    --builder linkcheck \
+    --show-traceback \
     docs/ docs/_build/linkcheck
 description =
   Check external links in the documentation (requires internet connection)
