MAINT: move `description` on one line

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,7 @@ allowlist_externals =
   pytest
 commands =
   pytest {posargs}
-description =
-  Run all unit tests
+description = Run all unit tests
 setenv =
   PYTHONHASHSEED = 0
 
@@ -27,8 +26,7 @@ commands =
     --cov-report=html \
     --cov-report=xml \
     --cov=ampform_dpd
-description =
-  Compute test coverage
+description = Compute test coverage
 
 [testenv:doc]
 allowlist_externals =
@@ -39,8 +37,7 @@ commands =
     --fail-on-warning \
     --keep-going \
     docs/ docs/_build/html
-description =
-  Build documentation with Sphinx
+description = Build documentation with Sphinx
 passenv = *
 setenv =
   FORCE_COLOR = yes
@@ -66,8 +63,7 @@ commands =
     --watch docs \
     --watch src \
     docs/ docs/_build/html
-description =
-  Set up a server to directly preview changes to the HTML pages
+description = Set up a server to directly preview changes to the HTML pages
 passenv = *
 setenv =
   FORCE_COLOR = yes
@@ -82,8 +78,7 @@ commands =
     --keep-going \
     --builder html \
     docs/ docs/_build/html
-description =
-  Execute Jupyter notebooks and build documentation with Sphinx
+description = Execute Jupyter notebooks and build documentation with Sphinx
 passenv = *
 setenv =
   EXECUTE_NB = yes
@@ -110,8 +105,7 @@ commands =
     --watch docs \
     --watch src \
     docs/ docs/_build/html
-description =
-  Set up a server to directly preview changes to the HTML pages
+description = Set up a server to directly preview changes to the HTML pages
 passenv = *
 setenv =
   EXECUTE_NB = yes
@@ -127,8 +121,7 @@ commands =
     --fail-on-warning \
     --keep-going \
     docs/ docs/_build/html
-description =
-  Execute Jupyter notebooks and build documentation with Sphinx
+description = Execute Jupyter notebooks and build documentation with Sphinx
 setenv =
   FORCE_COLOR = yes
   FORCE_EXECUTE_NB = yes
@@ -140,8 +133,7 @@ allowlist_externals =
 changedir = docs/_build
 commands =
   jcache {posargs:notebook list}
-description =
-  Inspect Jupyter cache
+description = Inspect Jupyter cache
 setenv =
   PYTHONHASHSEED = 0
 
@@ -153,8 +145,7 @@ commands =
     --builder linkcheck \
     --show-traceback \
     docs/ docs/_build/linkcheck
-description =
-  Check external links in the documentation (requires internet connection)
+description = Check external links in the documentation (requires internet connection)
 passenv = *
 setenv =
   FORCE_COLOR = yes
@@ -164,16 +155,14 @@ allowlist_externals =
   pytest
 commands =
   pytest --nbmake --nbmake-timeout=3600 {posargs:docs}
-description =
-  Run all notebooks with pytest
+description = Run all notebooks with pytest
 
 [testenv:sty]
 allowlist_externals =
   pre-commit
 commands =
   pre-commit run {posargs} -a
-description =
-  Perform all linting, formatting, and spelling checks
+description = Perform all linting, formatting, and spelling checks
 setenv =
   PYTHONHASHSEED = 0
   SKIP = pyright
