MAINT: simplify `tox.ini` with `base`

--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,6 @@ commands =
     --keep-going \
     docs/ docs/_build/html
 description = Build documentation with Sphinx
-setenv =
-  PYTHONHASHSEED = 0
 
 [testenv:doclive]
 allowlist_externals =
@@ -63,61 +61,24 @@ commands =
     --watch src \
     docs/ docs/_build/html
 description = Set up a server to directly preview changes to the HTML pages
-setenv =
-  PYTHONHASHSEED = 0
 
 [testenv:docnb]
-allowlist_externals =
-  sphinx-build
-commands =
-  sphinx-build \
-    --fail-on-warning \
-    --keep-going \
-    --builder html \
-    docs/ docs/_build/html
-description = Execute Jupyter notebooks and build documentation with Sphinx
+base = doc
 setenv =
+  {[testenv:doc]setenv}
   EXECUTE_NB = yes
-  PYTHONHASHSEED = 0
 
 [testenv:docnblive]
-allowlist_externals =
-  sphinx-autobuild
-commands =
-  sphinx-autobuild \
-    --open-browser \
-    --re-ignore .*/__pycache__/.* \
-    --re-ignore .*/.ipynb_checkpoints/.* \
-    --re-ignore .*\.pdf \
-    --re-ignore .*\.pkl \
-    --re-ignore .*\.png \
-    --re-ignore .*\.svg \
-    --re-ignore .*\.tmp \
-    --re-ignore docs/_build/.* \
-    --re-ignore docs/_images/.* \
-    --re-ignore docs/api/.* \
-    --re-ignore docs/export/.* \
-    --watch docs \
-    --watch src \
-    docs/ docs/_build/html
-description = Set up a server to directly preview changes to the HTML pages
+base = doclive
 setenv =
+  {[testenv:doclive]setenv}
   EXECUTE_NB = yes
-  PYTHONHASHSEED = 0
 
 [testenv:docnb-force]
-allowlist_externals =
-  sphinx-build
-commands =
-  sphinx-build \
-    --builder html \
-    --fail-on-warning \
-    --keep-going \
-    docs/ docs/_build/html
-description = Execute Jupyter notebooks and build documentation with Sphinx
+base = doc
 setenv =
+  {[testenv:doc]setenv}
   FORCE_EXECUTE_NB = yes
-  PYTHONHASHSEED = 0
 
 [testenv:linkcheck]
 allowlist_externals =
@@ -128,7 +89,6 @@ commands =
     --show-traceback \
     docs/ docs/_build/linkcheck
 description = Check external links in the documentation (requires internet connection)
-setenv =
 
 [testenv:nb]
 allowlist_externals =
@@ -144,5 +104,5 @@ commands =
   pre-commit run {posargs} -a
 description = Perform all linting, formatting, and spelling checks
 setenv =
-  PYTHONHASHSEED = 0
+  {[testenv]setenv}
   SKIP = pyright
