MAINT: write CLI flags with `=` sign and quotation marks

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --builder html \
+    --builder=html \
     --fail-on-warning \
     --keep-going \
     docs/ docs/_build/html
@@ -46,19 +46,19 @@ allowlist_externals =
 commands =
   sphinx-autobuild \
     --open-browser \
-    --re-ignore .*/.ipynb_checkpoints/.* \
-    --re-ignore .*/__pycache__/.* \
-    --re-ignore .*\.pkl \
-    --re-ignore .*\.pdf \
-    --re-ignore .*\.png \
-    --re-ignore .*\.svg \
-    --re-ignore .*\.tmp \
-    --re-ignore docs/_build/.* \
-    --re-ignore docs/_images/.* \
-    --re-ignore docs/api/.* \
-    --re-ignore docs/export/.* \
-    --watch docs \
-    --watch src \
+    --re-ignore='.*/.ipynb_checkpoints/.*' \
+    --re-ignore='.*/__pycache__/.*' \
+    --re-ignore='.*\.pkl' \
+    --re-ignore='.*\.pdf' \
+    --re-ignore='.*\.png' \
+    --re-ignore='.*\.svg' \
+    --re-ignore='.*\.tmp' \
+    --re-ignore='docs/_build/.*' \
+    --re-ignore='docs/_images/.*' \
+    --re-ignore='docs/api/.*' \
+    --re-ignore='docs/export/.*' \
+    --watch=docs \
+    --watch=src \
     docs/ docs/_build/html
 description = Set up a server to directly preview changes to the HTML pages
 
@@ -85,7 +85,7 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --builder linkcheck \
+    --builder=linkcheck \
     --show-traceback \
     docs/ docs/_build/linkcheck
 description = Check external links in the documentation (requires internet connection)
