MAINT: use `--ignore` instead of `--re-ignore` where possible

--- a/tox.ini
+++ b/tox.ini
@@ -45,18 +45,18 @@ allowlist_externals =
   sphinx-autobuild
 commands =
   sphinx-autobuild \
+    --ignore=docs/_build/ \
+    --ignore=docs/_images/ \
+    --ignore=docs/api/ \
+    --ignore=docs/export/ \
     --open-browser \
-    --re-ignore='.*/.ipynb_checkpoints/.*' \
     --re-ignore='.*/__pycache__/.*' \
-    --re-ignore='.*\.pkl' \
+    --re-ignore='.*/.ipynb_checkpoints/.*' \
     --re-ignore='.*\.pdf' \
+    --re-ignore='.*\.pkl' \
     --re-ignore='.*\.png' \
     --re-ignore='.*\.svg' \
     --re-ignore='.*\.tmp' \
-    --re-ignore='docs/_build/.*' \
-    --re-ignore='docs/_images/.*' \
-    --re-ignore='docs/api/.*' \
-    --re-ignore='docs/export/.*' \
     --watch=docs \
     --watch=src \
     docs/ docs/_build/html
