DX: disable Sphinx warnings in `linkcheck` job

--- a/tox.ini
+++ b/tox.ini
@@ -89,6 +89,8 @@ commands =
     --show-traceback \
     docs/ docs/_build/linkcheck
 description = Check external links in the documentation (requires internet connection)
+setenv =
+  PYTHONWARNINGS =
 
 [testenv:nb]
 allowlist_externals =
