DX: run `cov`, `docnb-force`, `linkcheck`, and `sty` in `tox`

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-  doc,
-  nb,
-  py,
+  cov,
+  docnb-force,
+  linkcheck,
   sty,
 skip_install = True
 skip_missing_interpreters = True
