FIX: start `sphinx-autobuild` on random available port

--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,7 @@ commands =
     --ignore=docs/api/ \
     --ignore=docs/export/ \
     --open-browser \
+    --port=0 \
     --re-ignore='.*/__pycache__/.*' \
     --re-ignore='.*/.ipynb_checkpoints/.*' \
     --re-ignore='.*\.pdf' \
