--- a/tox.ini
+++ b/tox.ini
@@ -104,7 +104,7 @@ description = Run all notebooks with pytest
 allowlist_externals =
   pre-commit
 commands =
-  pre-commit run {posargs} -a
+  pre-commit run {posargs} --all-files
 description = Perform all linting, formatting, and spelling checks
 setenv =
   {[testenv]setenv}
