DX: add `.virtual_documents` to `--re-ignore`

--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,7 @@ commands =
     --port=0 \
     --re-ignore='.*/__pycache__/.*' \
     --re-ignore='.*/.ipynb_checkpoints/.*' \
+    --re-ignore='.*/.virtual_documents/.*' \
     --re-ignore='.*\.pdf' \
     --re-ignore='.*\.pkl' \
     --re-ignore='.*\.png' \
