--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
 ci:
-  autoupdate_commit_msg: "MAINT: update pip constraints and pre-commit"
+  autoupdate_commit_msg: "MAINT: update lock files"
   autoupdate_schedule: quarterly # already done by requirements-cron.yml
   skip:
     - mypy
     - pyright
+    - uv-lock
 
 repos:
   - repo: meta
@@ -12,14 +13,12 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/ComPWA/policy
-    rev: 0.4.0
+    rev: 0.5.0rc7
     hooks:
       - id: check-dev-files
         args:
           - --doc-apt-packages=graphviz
           - --github-pages
-          - --no-prettierrc
-          - --pin-requirements=bimonthly
           - --repo-name=ampform-dpd
           - --repo-title=AmpForm-DPD
       - id: colab-toc-visible
@@ -54,7 +53,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.4
+    rev: v0.6.9
     hooks:
       - id: ruff
         args: [--fix]
@@ -63,7 +62,7 @@ repos:
         types_or: [python, pyi, jupyter]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -95,7 +94,7 @@ repos:
           - --in-place
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v8.13.3
+    rev: v8.15.1
     hooks:
       - id: cspell
 
@@ -120,7 +119,12 @@ repos:
         types:
           - python
 
-  - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.379
+  - repo: https://github.com/ComPWA/pyright-pre-commit
+    rev: v1.1.384
     hooks:
       - id: pyright
+
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.4.22
+    hooks:
+      - id: uv-lock
