--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "ampform >=0.15.1", # aslatex with keyword arguments
     "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
     "cloudpickle",
+    "numpy~=1.0",
     "qrules >=0.10.0",
     "sympy >=1.10", # module sympy.printing.numpy and array expressions with shape kwarg
     "tensorwaves[jax]",
@@ -40,19 +41,8 @@ name = "ampform-dpd"
 requires-python = ">=3.9"
 
 [project.optional-dependencies]
-jax = [
-    "numpy==1.*",
-    "tensorwaves[jax]",
-]
-numba = [
-    "tensorwaves[numba]",
-]
-tensorflow = [
-    "ampform-dpd[tf]",
-]
-tf = [
-    "tensorwaves[tf]",
-]
+numba = ["tensorwaves[numba]"]
+tf = ["tensorwaves[tf]"]
 
 [project.readme]
 content-type = "text/markdown"
